<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JCertif Home</string>
    <string name="login">Login :</string>
    <string name="logout">Déconnexion</string>
    <string name="password">Password :</string>
    <string name="connexion">Se connecter</string>
    <string name="quitter">Quitter</string>
    <string name="menu_settings">Settings</string>
    <string name="missing_login_password">Veuillez saisir le login et le mot de passe</string>
    <string name="wrong_login_password">Login ou mot de passe incorrecte</string>
    <string name="absent_connexion">Aucune connexion internet</string>
    <string name="management_users">Gestion des utilisateurs</string>
    <string name="setting">Paramétres</string>
    <string name="wrong_action">L\'action n\'a pas pu être effectuée</string>
    <string name="confirmation">Est ce que vous étes sur ?</string>    
    <string name="management_rooms">Gestion des locaux</string>
    <string name="add_room">Ajouter un local</string>
    <string name="update_room">Modifier un local</string>
    <string name="delete_room">Supprimer un local</string>   
    <string name="room_added">Local ajouté avec succés</string>
    <string name="room_not_add">Echec lors de l\'ajout du nouveau local</string>
    <string name="room_update">Local modifié avec succés</string>
    <string name="room_not_update">Echec lors de la modification du local</string>
  	<string name="room_deleted">Local supprimé avec succés</string>
  	<string name="room_not_deleted">Echec lors de la supprission du local</string>
  	<string name="ask_delete_room">Supprimer ce local ?</string>
  	
  	<string name="equipement_added">Equipement ajouté avec succés</string>
    <string name="equipement_not_add">Echec lors de l\'ajout du nouveau equipement</string>
    <string name="equipement_update">Equipement modifié avec succés</string>
    <string name="equipement_not_update">Echec lors de la modification de l\'equipement</string>
  	<string name="equipement_deleted">Equipement supprimé avec succés</string>
  	<string name="equipement_not_deleted">Echec lors de la supprission de l\'equipement</string>
  	<string name="ask_delete_equipement">Supprimer cet equipement ?</string>
  	<string name="msg_adresse">Veuillez introduire l\'adresse du serveur</string>
    <string name="cancel">Annuler</string>
    
    <string name="add_user">Ajouter un utilisateur</string>
    <string name="update_user">Modifier un utilisateur</string>
    <string name="delete_user">Supprimer un utilisateur</string>   
    <string name="user_added">Utilisateur ajouté avec succés</string>
    <string name="user_not_add">Echec lors de l\'ajout du nouvelle utilisateur</string>
    <string name="user_update">Utilisateur modifié avec succés</string>
    <string name="user_not_update">Echec lors de la modification de l\'utilisateur</string>
  	<string name="user_deleted">Utilisateur supprimé avec succés</string>
  	<string name="user_not_deleted">Echec lors de la supprission de l\'utilisateur</string>
  	<string name="ask_delete_user">Supprimer cet utilisateur ?</string>
  	
    <string name="name">"Nom : "</string>
  	
    <string name="type">Type :</string>
  	
    <string name="add">Ajouter</string>
  	
    <string name="controle_equipement">Contrôler equipement</string>
  	
    <string name="update_equipement">Modifier equipement</string>
  	
    <string name="remove_equipement">Supprimer equipement</string>
  	
    <string name="description">"Description : "</string>
  	
    <string name="numero_pin">Num pin :</string>
  	
    <string name="etat">"Etat : "</string>
  	
    <string name="on">ON</string>
  	
    <string name="off">OFF</string>
  	
    <string name="close">Fermer</string>
  	
    <string name="firstname">Prénom :</string>

    
</resources>