<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="160dp"
    android:orientation="vertical" 
    android:gravity="center_vertical"
    android:padding="5dp"
    android:layout_margin="3dp"
    android:background="@drawable/bg">
    
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/msg_adresse"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="17sp"/>

	<EditText
	    android:id="@+id/adresse"
	    android:layout_width="match_parent"
	    android:layout_height="50dp"
	    android:inputType="text"
        android:gravity="center"
	    android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:gravity="center"
	    android:layout_marginTop="10dp" >

		<Button
		    android:id="@+id/add"
		    android:layout_width="100dp"
		    android:layout_height="fill_parent"
		    android:text="@string/add" />

		<Button
		    android:id="@+id/fermer"
		    android:layout_width="100dp"
		    android:layout_height="fill_parent"
		    android:text="@string/close" />

	</LinearLayout>

</LinearLayout>