<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_cellule_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >
    
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="60dp"
		android:orientation="horizontal"
		android:background="@drawable/bar_navigation"
		android:paddingBottom="10dp">
	
	    <LinearLayout
	        android:id="@+id/back"
	        android:layout_width="50dp"
			android:layout_height="fill_parent"
			android:gravity="center">
		
		    <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/back" 
		        android:contentDescription="@string/app_name"/>
		
		</LinearLayout>
   
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="horizontal">
		        
	        <TextView
	            android:id="@+id/name"
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="0.8"
		        android:gravity="center"
		        android:paddingLeft="5dp"
		        android:textColor="#FFFFFF"
		        android:textSize="18sp"
		        android:textStyle="bold"
		        android:singleLine="true"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	            
		   	<LinearLayout
				android:id="@+id/add"
		   	    android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:layout_weight="0.2"
				android:gravity="center">
				
				<ImageView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:src="@drawable/add" 
				    android:contentDescription="@string/app_name"/>
					    
			</LinearLayout>
		        
		</LinearLayout>
		
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="50dp"
		android:gravity="center"
		android:orientation="vertical">
		
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="35dp"
	        android:layout_height="35dp"
	        android:indeterminateDrawable="@drawable/loading_progress" />

        <ListView
            android:id="@+id/list_rooms"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" />
        
        <LinearLayout
            android:id="@+id/add_room"
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
            android:visibility="gone" >
		   	
            <RelativeLayout
		        android:layout_width="fill_parent"
				android:layout_height="180dp"
				android:orientation="vertical">
				
                <LinearLayout
			        android:id="@+id/content_img"
			        android:layout_width="fill_parent"
					android:layout_height="180dp"
					android:gravity="center"
					android:orientation="vertical">
					
                    <ImageView
		            	android:id="@+id/img"
				        android:layout_width="160dp"
						android:layout_height="160dp"
						android:gravity="center"
						android:layout_gravity="center"
						android:orientation="vertical"
						android:contentDescription="@string/app_name"/>
                    
                </LinearLayout>        
                
                <LinearLayout
			        android:id="@+id/loading_img"
			        android:layout_width="fill_parent"
					android:layout_height="180dp"
					android:gravity="center"
					android:orientation="vertical">
					
                     <ProgressBar
			            android:layout_width="35dp"
				        android:layout_height="35dp"
						android:layout_gravity="center"
				        android:indeterminateDrawable="@drawable/loading_progress"  />
                    
                </LinearLayout>

            </RelativeLayout>
            
            <LinearLayout
		        android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:orientation="horizontal"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
				android:layout_marginTop="30dp"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameRoom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:ems="10" 
                    android:inputType="text"
                    android:textColor="@color/blue"
                    android:paddingLeft="5dp"
                    android:background="@drawable/search"/>
				
            </LinearLayout>
            
            <LinearLayout
		        android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:orientation="horizontal"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
	            android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:text="@string/type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/typeRoom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:background="@drawable/selecteur_taill" />
				
            </LinearLayout>
            
            <LinearLayout
		        android:layout_width="fill_parent"
				android:layout_height="40dp"
				android:layout_marginTop="30dp"      
	            android:gravity="center">
                
                <Button
                    android:id="@+id/action"
                    android:layout_width="135dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />
                
            </LinearLayout>
		   	
      	</LinearLayout>
		
    </LinearLayout>

</RelativeLayout>